--- a/portfolio.html
+++ b/portfolio.html
@@ -68,81 +68,63 @@
         <ul class="cart-list list">
           <li class="cart-element">
             <a href="" class="link">
-              <img src="./images/portfolio/img-8.jpg" alt="" class="cart-image" />
-              <div class="cart-text_container">
-                <p class="cart-title">Banking App Interface Concept</p>
+              <img width="360" src="./images/portfolio/img-8.jpg" alt="banking" class="cart-image" />
+              <h2 class="cart-title">Banking App Interface Concept</h2>
                 <p class="cart-description">App</p>
-              </div>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img src="./images/portfolio/img-7.jpg" alt="" class="cart-image" />
-            <div class="cart-text_container">
-              <p class="cart-title">Cashless Payment</p>
+              <img width="360" src="./images/portfolio/img-7.jpg" alt="cashless" class="cart-image" />
+              <h2 class="cart-title">Cashless Payment</h2>
               <p class="cart-description">Marketing</p>
-            </div>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img src="./images/portfolio/img-6.jpg" alt="" class="cart-image" />
-            <div class="cart-text_container">
-              <p class="cart-title">Meditation App</p>
+              <img width="360" src="./images/portfolio/img-6.jpg" alt="meditation" class="cart-image" />
+              <h2 class="cart-title">Meditation App</h2>
               <p class="cart-description">App</p>
-            </div>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img src="./images/portfolio/img-5.jpg" alt="" class="cart-image" />
-            <div class="cart-text_container">
-              <p class="cart-title">Taxi Service</p>
+              <img width="360" src="./images/portfolio/img-5.jpg" alt="taxi" class="cart-image" />
+              <h2 class="cart-title">Taxi Service</h2>
               <p class="cart-description">Marketing</p>
-            </div>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img src="./images/portfolio/img-4.jpg" alt="" class="cart-image" />
-            <div class="cart-text_container">
-              <p class="cart-title">Screen Illustrations</p>
+              <img width="360" src="./images/portfolio/img-4.jpg" alt="screen" class="cart-image" />
+              <h2 class="cart-title">Screen Illustrations</h2>
               <p class="cart-description">Design</p>
-            </div>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img src="./images/portfolio/img-3.jpg" alt="" class="cart-image" />
-            <div class="cart-text_container">
-              <p class="cart-title">Online Courses</p>
+              <img width="360" src="./images/portfolio/img-3.jpg" alt="courses" class="cart-image" />
+              <h2 class="cart-title">Online Courses</h2>
               <p class="cart-description">Marketing</p>
-            </div>
             </a>
           </li>
           <li class="cart-element">
-            <img src="./images/portfolio/img-2.jpg" alt="" class="cart-image" />
-            <div class="cart-text_container">
-              <p class="cart-title">Instagram Stories Concept</p>
+            <img width="360" src="./images/portfolio/img-2.jpg" alt="instagram" class="cart-image" />
+            <h2 class="cart-title">Instagram Stories Concept</h2>
               <p class="cart-description">Design</p>
-            </div>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img src="./images/portfolio/img-1.jpg" alt="" class="cart-image" />
-            <div class="cart-text_container">
-              <p class="cart-title">Organic Food</p>
+              <img width="360" src="./images/portfolio/img-1.jpg" alt="food" class="cart-image" />
+              <h2 class="cart-title">Organic Food</h2>
               <p class="cart-description">Web Site</p>
-            </div>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img src="./images/portfolio/img.jpg" alt="" class="cart-image:s" />
-            <div class="cart-text_container">
-              <p class="cart-title">Fresh Coffee</p>
+              <img width="360" src="./images/portfolio/img.jpg" alt="coffee" class="cart-image:s" />
+              <h2 class="cart-title">Fresh Coffee</h2>
               <p class="cart-description">Web Site</p>
-            </div>
             </a>
           </li>
         </ul>
