--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles-reset.css" />
-    <!-- <link rel="stylesheet" href="./css/fonts.css" /> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Roboto:wght@400;500;600;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.gstatic.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title class="title-text">Webstudio</title>
   </head>
@@ -21,7 +25,9 @@
             <a href="./index.html" class="header-navigation_a link">Studio</a>
           </li>
           <li class="header-navigation_li">
-            <a href="./portfolio.html" class="header-navigation_a link">Portfolio</a>
+            <a href="./portfolio.html" class="header-navigation_a link"
+              >Portfolio</a
+            >
           </li>
           <li class="header-navigation_li">
             <a href="" class="header-navigation_a link">Contacts</a>
@@ -31,9 +37,7 @@
       <address class="header-adrress">
         <ul class="header-address_ul list">
           <li class="header-address_li">
-            <a
-              href="mailto:info@devstudio.com"
-              class="header-address_link link"
+            <a href="mailto:info@devstudio.com" class="header-address_link link"
               >info@devstudio.com</a
             >
           </li>
@@ -48,7 +52,9 @@
     <main class="main-container">
       <section class="content-section start-section">
         <h1 class="cover-section_h">Effective Solutions for Your Business</h1>
-        <button type="button" class="cover-section_button">Order Service</button>
+        <button type="button" class="cover-section_button">
+          Order Service
+        </button>
       </section>
       <section class="content-section feature-section">
         <h2 class="visually-hidden">Features</h2>
@@ -160,8 +166,8 @@
     </main>
     <footer class="footer-container">
       <a href="./index.html" class="icon-logo_text link"
-          >Web<span class="logo-accent">Studio</span></a
-        >
+        >Web<span class="logo-accent">Studio</span></a
+      >
       <p class="footer-content_text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
