--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles-reset.css" />
-    <!-- <link rel="stylesheet" href="./css/fonts.css" /> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Roboto:wght@400;500;600;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.gstatic.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title class="title-text">Portfolio</title>
   </head>
@@ -21,7 +25,9 @@
             <a href="./index.html" class="header-navigation_a link">Studio</a>
           </li>
           <li class="header-navigation_li">
-            <a href="./portfolio.html" class="header-navigation_a link">Portfolio</a>
+            <a href="./portfolio.html" class="header-navigation_a link"
+              >Portfolio</a
+            >
           </li>
           <li class="header-navigation_li">
             <a href="" class="header-navigation_a link">Contacts</a>
@@ -31,9 +37,7 @@
       <address class="header-adrress">
         <ul class="header-address_ul list">
           <li class="header-address_li">
-            <a
-              href="mailto:info@devstudio.com"
-              class="header-address_link link"
+            <a href="mailto:info@devstudio.com" class="header-address_link link"
               >info@devstudio.com</a
             >
           </li>
@@ -68,61 +72,106 @@
         <ul class="cart-list list">
           <li class="cart-element">
             <a href="" class="link">
-              <img width="360" src="./images/portfolio/img-8.jpg" alt="banking" class="cart-image" />
+              <img
+                width="360"
+                src="./images/portfolio/img-8.jpg"
+                alt="banking"
+                class="cart-image"
+              />
               <h2 class="cart-title">Banking App Interface Concept</h2>
-                <p class="cart-description">App</p>
+              <p class="cart-description">App</p>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img width="360" src="./images/portfolio/img-7.jpg" alt="cashless" class="cart-image" />
+              <img
+                width="360"
+                src="./images/portfolio/img-7.jpg"
+                alt="cashless"
+                class="cart-image"
+              />
               <h2 class="cart-title">Cashless Payment</h2>
               <p class="cart-description">Marketing</p>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img width="360" src="./images/portfolio/img-6.jpg" alt="meditation" class="cart-image" />
+              <img
+                width="360"
+                src="./images/portfolio/img-6.jpg"
+                alt="meditation"
+                class="cart-image"
+              />
               <h2 class="cart-title">Meditation App</h2>
               <p class="cart-description">App</p>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img width="360" src="./images/portfolio/img-5.jpg" alt="taxi" class="cart-image" />
+              <img
+                width="360"
+                src="./images/portfolio/img-5.jpg"
+                alt="taxi"
+                class="cart-image"
+              />
               <h2 class="cart-title">Taxi Service</h2>
               <p class="cart-description">Marketing</p>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img width="360" src="./images/portfolio/img-4.jpg" alt="screen" class="cart-image" />
+              <img
+                width="360"
+                src="./images/portfolio/img-4.jpg"
+                alt="screen"
+                class="cart-image"
+              />
               <h2 class="cart-title">Screen Illustrations</h2>
               <p class="cart-description">Design</p>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img width="360" src="./images/portfolio/img-3.jpg" alt="courses" class="cart-image" />
+              <img
+                width="360"
+                src="./images/portfolio/img-3.jpg"
+                alt="courses"
+                class="cart-image"
+              />
               <h2 class="cart-title">Online Courses</h2>
               <p class="cart-description">Marketing</p>
             </a>
           </li>
           <li class="cart-element">
-            <img width="360" src="./images/portfolio/img-2.jpg" alt="instagram" class="cart-image" />
+            <img
+              width="360"
+              src="./images/portfolio/img-2.jpg"
+              alt="instagram"
+              class="cart-image"
+            />
             <h2 class="cart-title">Instagram Stories Concept</h2>
-              <p class="cart-description">Design</p>
+            <p class="cart-description">Design</p>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img width="360" src="./images/portfolio/img-1.jpg" alt="food" class="cart-image" />
+              <img
+                width="360"
+                src="./images/portfolio/img-1.jpg"
+                alt="food"
+                class="cart-image"
+              />
               <h2 class="cart-title">Organic Food</h2>
               <p class="cart-description">Web Site</p>
             </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
-              <img width="360" src="./images/portfolio/img.jpg" alt="coffee" class="cart-image:s" />
+              <img
+                width="360"
+                src="./images/portfolio/img.jpg"
+                alt="coffee"
+                class="cart-image:s"
+              />
               <h2 class="cart-title">Fresh Coffee</h2>
               <p class="cart-description">Web Site</p>
             </a>
@@ -132,8 +181,8 @@
     </main>
     <footer class="footer-container">
       <a href="./index.html" class="icon-logo_text link"
-          >Web<span class="logo-accent">Studio</span></a
-        >
+        >Web<span class="logo-accent">Studio</span></a
+      >
       <p class="footer-content_text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
