--- a/portfolio.html
+++ b/portfolio.html
@@ -13,17 +13,13 @@
   <body>
     <header class="header-container">
       <nav class="header-navigation">
-        <a href="./index.html" class="icon-logo_text link"
-          >Web<span class="logo-accent">Studio</span></a
-        >
+        <a href="./index.html" class="icon-logo_text link">Web<span class="logo-accent">Studio</span></a>
         <ul class="header-navigation_ul list">
           <li class="header-navigation_li">
             <a href="./index.html" class="header-navigation_a link">Studio</a>
           </li>
           <li class="header-navigation_li">
-            <a href="./portfolio.html" class="header-navigation_a link"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="header-navigation_a link">Portfolio</a>
           </li>
           <li class="header-navigation_li">
             <a href="" class="header-navigation_a link">Contacts</a>
@@ -33,14 +29,10 @@
       <address class="header-adrress">
         <ul class="header-address_ul list">
           <li class="header-address_li">
-            <a href="mailto:info@devstudio.com" class="header-address_link link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="header-address_link link">info@devstudio.com</a>
           </li>
           <li class="header-address_li">
-            <a href="tel:+110001111111" class="header-address_link link"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111" class="header-address_link link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
