--- a/portfolio.html
+++ b/portfolio.html
@@ -5,21 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title class="title-text">Portfolio</title>
   </head>
   <body>
     <header class="header-container">
       <nav class="header-navigation">
-        <a href="./index.html" class="icon-logo_text link">Web<span class="logo-accent">Studio</span></a>
+        <a href="./index.html" class="icon-logo_text link"
+          >Web<span class="logo-accent">Studio</span></a
+        >
         <ul class="header-navigation_ul list">
           <li class="header-navigation_li">
             <a href="./index.html" class="header-navigation_a link">Studio</a>
           </li>
           <li class="header-navigation_li">
-            <a href="./portfolio.html" class="header-navigation_a link">Portfolio</a>
+            <a href="./portfolio.html" class="header-navigation_a link"
+              >Portfolio</a
+            >
           </li>
           <li class="header-navigation_li">
             <a href="" class="header-navigation_a link">Contacts</a>
@@ -29,10 +39,14 @@
       <address class="header-adrress">
         <ul class="header-address_ul list">
           <li class="header-address_li">
-            <a href="mailto:info@devstudio.com" class="header-address_link link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="header-address_link link"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="header-address_li">
-            <a href="tel:+110001111111" class="header-address_link link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="header-address_link link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -131,14 +145,16 @@
             </a>
           </li>
           <li class="cart-element">
-            <img
-              width="360"
-              src="./images/portfolio/img-2.jpg"
-              alt="instagram"
-              class="cart-image"
-            />
-            <h2 class="cart-title">Instagram Stories Concept</h2>
-            <p class="cart-description">Design</p>
+            <a href="" class="link">
+              <img
+                width="360"
+                src="./images/portfolio/img-2.jpg"
+                alt="instagram"
+                class="cart-image"
+              />
+              <h2 class="cart-title">Instagram Stories Concept</h2>
+              <p class="cart-description">Design</p>
+            </a>
           </li>
           <li class="cart-element">
             <a href="" class="link">
